[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/main_screen/handled_by_myself.gd" type="Script" id=1]

[node name="VBoxContainer" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 420.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 161.0
margin_bottom = 20.0
text = "Attach to Bottom Panel"

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 165.0
margin_right = 295.0
margin_bottom = 20.0
text = "Attach to Dockslot"

[node name="Button3" type="Button" parent="HBoxContainer"]
margin_left = 299.0
margin_right = 420.0
margin_bottom = 20.0
text = "Attach to Toolbar"

[node name="Node" type="Node" parent="."]

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
